# minilogue-xd

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
assets/ai/: SOUND_DESIGN.md
crates/minilogue/: Cargo.toml
crates/minilogue-xd/: Cargo.toml
crates/minilogue-xd/examples/: berlin_school-legend.txt  berlin_school.mid  berlin_school.rs  exit.rs  export_midi.rs  list_ports.rs  quintal.rs  read_edit_buffer.rs  read_patch.rs  sysex_roundtrip_diag.rs  test_drive.rs
crates/minilogue-xd/src/: controller.rs  device.rs  lib.rs  midi_file.rs  transport.rs
crates/minilogue-xd/src/builder/: patch.rs
crates/minilogue-xd/src/message/: channel.rs  common.rs  mod.rs  realtime.rs
crates/minilogue-xd/src/param/: encoding.rs  enums.rs  mod.rs  nrpn.rs
crates/minilogue-xd/src/sysex/: frame.rs  global.rs  helpers.rs  identity.rs  transaction.rs  tuning.rs  user_module.rs
crates/minilogue-xd/src/sysex/program/: file.rs  mod.rs  sequencer.rs  synth.rs
crates/minilogue-xd/tests/: builder_roundtrip.rs  cc_coverage.rs  sysex_flows.rs
crates/minilogue/src/: lib.rs
docs/: index.html
docs/design/: index.md
docs/design/02-under-review/: 0001-minilogue-xd-rust-library-project-plan.md
docs/design/05-active/: 0002-midi-file-export-implementation-plan.md
docs/design/06-final/: 0001-minilogue-xd-rust-library-project-plan.md
docs/dev/: 0001-phase-1-implementation-plan-minilogue-xd-foundation.md  0002-phase-2-implementation-plan-parameter-layer.md  0003-phase-3-implementation-plan-sysex-layer.md  0004-phase-4-implementation-plan-high-level-api.md
docs/korg-user-guide/: book.md  metadata.json
examples/: berlin_school.rs  list_ports.rs  test_drive.rs
src/: codec.rs  connection.rs  error.rs  lib.rs  transport.rs
src/builder/: mod.rs  patch.rs  sequence.rs
src/message/: types.rs
src/param/: cc.rs  enums.rs
src/sysex/: enums.rs  frame.rs  global.rs  mod.rs  poly_chain.rs  transaction.rs
src/sysex/program/: sequencer.rs
tests/: builder_roundtrip.rs  nrpn_coverage.rs
