[package]
name = "minilogue-xd"
version = "0.2.0"
edition = "2021"
description = "Rust library for the Korg Minilogue XD synthesizer MIDI implementation"
license = "MIT OR Apache-2.0"
repository = "https://github.com/oxur/minilogue-xd"
readme = "../../README.md"
keywords = ["midi", "synthesizer", "korg", "minilogue", "music"]
categories = ["multimedia::audio", "hardware-support"]

[features]
default = ["midi-io", "file-formats", "std"]
std = []
midi-io = ["dep:midir"]
file-formats = ["dep:zip"]

[dependencies]
thiserror = "2"
bitflags = "2"
crc32fast = "1"
music-comp-mt = { version = "0.5", features = ["midi"] }
midir = { version = "0.10", optional = true }
zip = { version = "8.5", optional = true, default-features = false, features = ["deflate"] }

[dev-dependencies]
proptest = "1"

[[example]]
name = "list_ports"
required-features = ["midi-io"]

[[example]]
name = "test_drive"
required-features = ["midi-io"]

[[example]]
name = "berlin_school"
required-features = ["midi-io"]

[[example]]
name = "read_patch"
required-features = ["midi-io"]

[[example]]
name = "exit"
required-features = ["midi-io"]

[[example]]
name = "export_midi"

[[example]]
name = "quintal"
required-features = ["midi-io"]

[[example]]
name = "read_edit_buffer"
required-features = ["midi-io"]

[[example]]
name = "sysex_roundtrip_diag"
required-features = ["midi-io"]
